# Owlimatronic

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs
src/modules/: audio.rs  mod.rs  wifi.rs
src/modules/animation/: mod.rs
src/modules/audio/: mod.rs
src/modules/audio/files/: mod.rs  owl.pcm
src/modules/indicator/: mod.rs
src/modules/servo/: mod.rs
ui/: .gitignore  package-lock.json  package.json  svelte.config.js
ui/src/: hooks.server.ts
ui/src/lib/: streamer.ts
ui/src/lib/assets/: owl.svelte
ui/src/lib/server/: discord.ts  util.ts
ui/src/lib/server/services/: discord.ts  mqtt.ts  streamer.ts
ui/src/routes/: +layout.svelte  +page.svelte  audio.remote.ts  mqtt.remote.ts
ui/src/styles/: globals.scss
