[package]
name = "owlimatronic"
version = "0.1.0"
authors = ["valivia"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "owlimatronic"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal ={ version = "=0.45.0", features = ["rmt-legacy"] }
toml-cfg    = "=0.1.3"
rgb         = "0.8.29"
anyhow      = "=1.0.95"

[build-dependencies]
embuild  = "0.33"
toml-cfg = "=0.1.3"